# codex-hud

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  architecture.html  hud-preview.html  install.sh
docs/superpowers/plans/: 2026-05-31-codex-cli-hud.md
src/: bridge.rs  config.rs  hud.rs  hud_collectors.rs  launcher.rs  lib.rs  protocol.rs  pty.rs  pty_host.rs  surface.rs  wrapper.rs
src/hud_collectors/: cc_switch.rs  mcp.rs
tests/: bridge_roundtrip.rs  config.rs  hud_render.rs  hud_state.rs  launcher_flow.rs  link_unix.rs  pty_layout.rs  smoke.rs  wrapper_args.rs
