[package]
name = "codex-hud"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "codex"
path = "src/bin/codex.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"

[dev-dependencies]
tempfile = "3"
