[package]
name = "codex-hud"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "codex"
path = "src/bin/codex.rs"

[dependencies]
crossterm = "0.28"
futures-util = "0.3"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
unicode-width = "0.2"
ureq = { version = "2", default-features = false }

[dev-dependencies]
tempfile = "3"
